syntax = "proto3";

option go_package = "sensor";

import "storage/cluster.proto";
import "storage/policy.proto";
import "google/protobuf/timestamp.proto";
import "internalapi/central/sensor_events.proto";

package sensor;

message AdmissionControlSettings {
    storage.DynamicClusterConfig cluster_config      = 1;
    storage.PolicyList enforced_deploy_time_policies = 2;
    google.protobuf.Timestamp timestamp              = 3;
    string cache_version                             = 4;

    string central_endpoint                          = 5;

    string cluster_id                                = 6;
}

message AdmissionControlAlerts {
    repeated central.AlertResults   alert_results   = 1;
}
